--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>portfolio</title>
-    <link rel="stylesheet" href="index.css" type="text/css" />
+    <link rel="stylesheet" href="css/index.css" type="text/css" />
 </head>
 
 <body>
@@ -12,7 +12,7 @@
             <ul class="border">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#Contact">Contact</a></li>
+                <li><a href="c ontact.html">Contact</a></li>
                 <li><a href="#project">Projects</a></li>
             </ul>
         </nav>
@@ -26,11 +26,13 @@
         <h3>Hello 🖐️ i'm</h3>
         <h1>Ayush Patel</h1>
     </div>
-
-    <section>
-        <h1 style="text-align: center;margin-top: 25px;">About</h1>
-        <div class="abouttext" id="about">
-            <p>I am an Computer engineer with a passion for developing innovative solutions. I'm a coding
+    <section class="About" id="about">
+        <center>
+            <p class="p3"> 👉 About Me</p>
+        </center>
+        <div>
+            <img class="profile" src="PortfolioMy.jpg">
+            <p class="p4">I am an Computer engineer with a passion for developing innovative solutions. I'm a coding
                 enthusiast and familiar with Programming in C, C++, Dart, Java and Python . I'm also fairly good at
                 flutter
                 app development and Data structures and Algorithms. I can learn and adapt to new technologies easily. I
@@ -39,34 +41,107 @@
         </div>
     </section>
 
-    <section id="contact" class="contactstyle">
-        <h2>Contact Me</h2>
-        <p>You can contact me by email at ayushkumar112428@gmail.com</p>
-        <p>Contact Number-82004XXXXX</p>
+    <section class="skills">
+        <div>
+            <center>
+                <h1 style="font-size: 40; color: #232323; margin-bottom: 40px;">My Skills</h1>
+            </center>
+            <div class="part">
+                <section class="subpart">
+                    <center>
+                        <p style="margin-bottom: 20px;">Here are some of the skills i have developed
+                        </p>
+                    </center>
+                    <div class="subpart2">
+                        <h1 style="font-size: 27; margin-bottom: 15px;">App Development</h1>
+                        <h1 style="font-size: 27; margin-bottom: 15px;">Photography</h1>
+                        <h1 style="font-size: 27; margin-bottom: 15px;">Graphic Design</h1>
+                        <h1 style="font-size: 27; margin-bottom: 15px;">Flutter , DSA</h1>
+                        <h1 style="font-size: 27; margin-bottom: 15px">C , C++ , Dart</h1>
+                    </div>
+                </section>
+            </div>
+        </div>
     </section>
 
+    <section class="skills">
+        <div>
+            <center>
+                <h1 style="font-size: 40; color: #232323; margin-bottom: 40px;">My Projects</h1>
+            </center>
+            <div class="part">
+                <section class="subpart">
+                    <center>
+                        <p style="margin-bottom: 20px;">Here are some of the projects i have developed
+                        </p>
+                    </center>
+                    <div>
+                        <h1 style="font-size: 27; margin-bottom: 15px;">App Development</h1>
+                        <li>
+                            Flight Ticket & Hotel Booking App Design In Flutter (Fly).
+                        </li>
+                        <h1 style="font-size: 27; margin-bottom: 15px;">Web Development</h1>
+                        <li>
+                            Create a portfolio use html and css (ayushpatel0711).
+                        </li>
+                    </div>
+                    <div></div>
+                    <center style="margin-top: 180px;">
+                        <p>
+                            Thish all projects codes uplodes github web side. <a
+                                href="https://github.com/ayushkumar112428" style="color: green">github</a>
+                        </p>
+                    </center>
+
+                </section>
+            </div>
+        </div>
+    </section>
+
+    <section class="contact">
+        <main>
+            <section class="lablstyle">
+                <center>
+                    <h2 style="padding-bottom: 20px; size: 30;">Get in Touch</h2>
+                </center>
+                <form action="#" method="post">
+                    <label for="name">Name:</label>
+                    <input type="text" id="name" name="name" required>
+
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required>
+
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" required></textarea>
+
+                    <input style="margin-top: 30px" type="submit" value="Send Message">
+                </form>
+            </section>
+        </main>
+
+        <section class="details">
+            <center>
+                <h2 style="padding-bottom: 10px;">Contact Details</h2>
+                <h3 style="padding-bottom: 10px;">Patel Ayush</h3>
+                <h4 style="padding-bottom: 10px;">Phone: 820-044-6981</h4>
+                <h5>Email : <a href="Mailto:ayushkumar112428@gmail.com"
+                        style="color: #d8ad89;">ayushkumar112428@gmail.com</a>
+                </h5>
+                <ul class="SocialLink">
+                    <li><a href="https://github.com/ayushkumar112428" style="color: #d8ad89;">Github</a></li>
+                    <li><a href="https://www.linkedin.com/in/ayush-patel-a5024723a/"
+                            style="color: #d8ad89;">Linkdein</a>
+                    </li>
+                    <li><a href="https://www.instagram.com/ayushkumar112428/" style="color: #d8ad89;">Instagram</a></li>
+                </ul>
+            </center>
+        </section>
+    </section>
 
     <footer>
 
         <p>&copy; 2023 Ayush Patel</p>
 
-        <!-- <div class="footer">
-
-            <div class="row">
-                <ul>
-                    
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                </ul>
-            </div>
-
-            <div class="row">
-
-            </div>
-        </div> -->
     </footer>
 </body>
 
