--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul class="border">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="c ontact.html">Contact</a></li>
+                <li><a href="#contact">Contact</a></li>
                 <li><a href="#project">Projects</a></li>
             </ul>
         </nav>
@@ -64,7 +64,7 @@
         </div>
     </section>
 
-    <section class="skills">
+    <section class="project">
         <div>
             <center>
                 <h1 style="font-size: 40; color: #232323; margin-bottom: 40px;">My Projects</h1>
@@ -98,7 +98,7 @@
         </div>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
         <main>
             <section class="lablstyle">
                 <center>
