--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="#project">Projects</a></li>
+                <li><a href="#projects">Projects</a></li>
             </ul>
         </nav>
 
@@ -64,7 +64,7 @@
         </div>
     </section>
 
-    <section class="project">
+    <section class="project" id="projects">
         <div>
             <center>
                 <h1 style="font-size: 40; color: #232323; margin-bottom: 40px;">My Projects</h1>
